@@ -11,9 +11,8 @@ import com.gargoylesoftware.htmlunit.WebRequest;
 import com.gargoylesoftware.htmlunit.util.NameValuePair;
 import java.io.IOException;
 import java.net.URL;
-import java.util.Collection;
 import java.util.Collections;
-import java.util.Enumeration;
+import java.util.List;
 import java.util.Map;
 import javax.servlet.ServletException;
 import javax.servlet.ServletRequest;
@@ -172,7 +171,7 @@ public class DoActionFilterTest extends StaplerAbstractTest {
 
         @JsonResponse // does not support list
         public Map<String, Object> doAnnotatedJsonResponse() {
-            return Collections.singletonMap("a", "b");
+            return Map.of("a", "b");
         }
 
         @LimitedTo("admin")
@@ -391,7 +390,7 @@ public class DoActionFilterTest extends StaplerAbstractTest {
         // WebClient forces us to use POST to have the possibility to send requestBody
         settings.setHttpMethod(HttpMethod.POST);
         settings.setAdditionalHeader("Content-Type", "application/json");
-        settings.setRequestBody(JSONObject.fromObject(Collections.singletonMap("name", "Test")).toString());
+        settings.setRequestBody(JSONObject.fromObject(Map.of("name", "Test")).toString());
         assertReachableWithSettings(settings);
     }
 
@@ -400,10 +399,10 @@ public class DoActionFilterTest extends StaplerAbstractTest {
         WebRequest settings = new WebRequest(new URL(j.getURL(), "testNewRulesOk/annotatedParamSubmittedForm/"));
         settings.setHttpMethod(HttpMethod.POST);
 
-        settings.setRequestParameters(Collections.singletonList(
+        settings.setRequestParameters(List.of(
                 new NameValuePair(
                         "json",
-                        JSONObject.fromObject(Collections.singletonMap("name", "Test")).toString()
+                        JSONObject.fromObject(Map.of("name", "Test")).toString()
                 )
         ));
         assertReachableWithSettings(settings);
@@ -497,8 +496,6 @@ public class DoActionFilterTest extends StaplerAbstractTest {
 
         public void doWithResponseImpl(ResponseImpl response) { replyOk(); }
 
-        public void doWithRequestAndResponse(RequestAndResponse requestAndResponse) { replyOk(); }
-
         // special case to keep Groovy parameter name, but does not seem to indicate it's automatically a web method
         @CapturedParameterNames("req")
         public void doAnnotatedResponseSuccess(Object req) { replyOk(); }
@@ -506,21 +503,6 @@ public class DoActionFilterTest extends StaplerAbstractTest {
 //        // as mentioned in its documentation, it requires to have JavaScriptMethod, that has its own test
 //        @JsonOutputFilter
 //        public void doAnnotatedJsonOutputFilter() { replyOk(); }
-    }
-
-    public abstract static class RequestAndResponse implements StaplerRequest, StaplerResponse {
-        @Override
-        public CollectionAndEnumeration getHeaderNames() {
-            return null;
-        }
-
-        @Override
-        public CollectionAndEnumeration getHeaders(String name) {
-            return null;
-        }
-
-        public abstract static class CollectionAndEnumeration implements Collection, Enumeration {
-        }
     }
 
     @Test
@@ -544,12 +526,6 @@ public class DoActionFilterTest extends StaplerAbstractTest {
     @Test
     public void testNotOkSpecialCases_withResponseImpl() throws Exception {
         assertNotReachable("testNewRulesNotOkSpecialCases/withResponseImpl/");
-        assertDoActionRequestWasBlockedAndResetFlag();
-    }
-
-    @Test
-    public void testNotOkSpecialCases_withRequestAndResponse() throws Exception {
-        assertNotReachable("testNewRulesNotOkSpecialCases/withRequestAndResponse/");
         assertDoActionRequestWasBlockedAndResetFlag();
     }
 
